# baazari

./: .gitignore  .travis.yml  README.md  baazari.cabal  bazaari.cabal  stack.yaml
src/: Baazari.hs  Bazaari.hs  Types.hs
src/Baazari/: Http.hs  Types.hs
src/Bazaari/: Feeds.hs  Http.hs  Types.hs
test/: Main.hs
