name:                bazaari
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/nlander/bazaari#readme
license:             BSD3
license-file:        LICENSE
author:              Nathan Lander
maintainer:          lander89@gmail.com
copyright:           cc Attribution-ShareAlike 4.0 International
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Bazaari
                       Bazaari.Types
                       Bazaari.Http
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , base64-bytestring
                     , country-codes
                     , cryptonite
                     , email-validate
                     , http-conduit
                     , http-types
                     , memory
                     , text
                     , time
                     , tz
  default-language:    Haskell2010
  extensions:          OverloadedStrings
                     , RecordWildCards

test-suite bazaari-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:       base
                     , bazaari
                     , bytestring
                     , country-codes
                     , email-validate
                     , hspec
                     , http-types
                     , time
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  extensions:          OverloadedStrings

source-repository head
  type:     git
  location: https://github.com/nlander/bazaari
